--- a/index.html
+++ b/index.html
@@ -2,87 +2,168 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Bootstrap Link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Ubuntu&display=swap"
+        rel="stylesheet" />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5d4c217aa8.js" crossorigin="anonymous"></script>
+    <!-- CSS Styles Link -->
+    <link rel="stylesheet" href="styles.css" />
+    <title>Login and Registration</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="title-text">
-            <div class="title login">
-                Login Form
+    <section id="navbar">
+        <nav class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="home.html">Money Management Tool</a>
             </div>
-            <div class="title signup">
-                Signup Form
+        </nav>
+    </section>
+    <section id="signup">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-lg-4 m-auto rounded-top wrapper sign-up-box">
+                    <h2 class="text-center pt-3">Signup Now</h2>
+                    <p class="text-center text-muted lead mb-3">
+                        To Access Money Management Tool
+                    </p>
+                    <!-- Form Start -->
+                    <form action="#">
+                        <!-- First Name Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa fa-user"></i>
+                            </span>
+                            <input type="text" id="first_name" class="form-control" placeholder="First Name" required />
+                        </div>
+                        <!-- Last Name Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa fa-user"></i>
+                            </span>
+                            <input type="text" id="last_name" class="form-control" placeholder="Last Name" required />
+                        </div>
+                        <!-- Email Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa-solid fa-envelope"></i>
+                            </span>
+                            <input type="text" id="email" class="form-control" placeholder="Email" required />
+                        </div>
+                        <!-- Password Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa-solid fa-lock"></i>
+                            </span>
+                            <input type="password" id="password" class="form-control" placeholder="Password" required />
+                        </div>
+                        <!-- Confirm Password Div
+              <div class="input-group mb-3">
+                <span class="input-group-text">
+                  <i class="fa-solid fa-lock"></i>
+                </span>
+                <input
+                  type="password"
+                  id="confirm-password"
+                  class="form-control"
+                  placeholder="Confirm Password"
+                  required
+                />
+              </div> -->
+
+                        <!-- Admin or student Div -->
+
+                        <!-- <div class="select mb-2 text-center">
+                <select
+                  class="form-select mb-3"
+                  aria-label="AoS"
+                  onchange="if (this.selectedIndex==2){this.form['access'].style.visibility='visible'} else {this.form['access'].style.visibility='hidden'};"
+                >
+                  <option selected>Select User Type</option>
+                  <option value="1">Teacher / Parent</option>
+                  <option value="2">Student / Child</option>
+                </select>
+                <input
+                  type="textbox"
+                  id="role"
+                  name="access"
+                  placeholder="Enter Access Code"
+                  style="visibility: hidden"
+                />
+              </div> -->
+
+                        <!-- Signup Button Div -->
+                        <div class="d-grid text-center">
+                            <button onclick="register()" class="btn btn-success mb-3">
+                                Register
+                            </button>
+                            <p class="text-center text-muted mt-2">
+                                Click "Signup Now" to fully register and access the Money
+                                Management Tool
+                            </p>
+                            <p class="text-center">
+                                Already have an account? <a href="login.html"> Login Here</a>
+                            </p>
+                        </div>
+                    </form>
+                    <!-- Form End -->
+                </div>
+                <div class="col-lg-4 m-auto rounded-top wrapper log-in-box">
+                    <h2 class="text-center pt-3">Login</h2>
+                    <p class="text-center text-muted lead mb-3"></p>
+                    <!-- Form Start -->
+                    <form action="#">
+                        <!-- Email Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa-solid fa-envelope"></i>
+                            </span>
+                            <input type="text" id="login-email" class="form-control" placeholder="Email" required />
+                        </div>
+                        <!-- Password Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa-solid fa-lock"></i>
+                            </span>
+                            <input type="password" id="login-password" class="form-control" placeholder="Password"
+                                required />
+                        </div>
+                        <!-- Login Button Div -->
+                        <div class="d-grid text-center">
+                            <button onclick="login()" class="btn btn-success mb-3">
+                                Login Now
+                            </button>
+                            <p class="text-center">
+                                Don't have an account?
+                                <a href="index.html"> Register Here</a>
+                            </p>
+                        </div>
+                    </form>
+                    <!-- Form End -->
+                </div>
             </div>
         </div>
-        <div class="form-container">
-            <div class="slide-controls">
-                <input type="radio" name="slide" id="login" checked>
-                <input type="radio" name="slide" id="signup">
-                <label for="login" class="slide login">Login</label>
-                <label for="signup" class="slide signup">Signup</label>
-                <div class="slider-tab"></div>
-            </div>
-            <div class="form-inner">
-                <form action="#" class="login">
-                    <div class="field">
-                        <input type="text" placeholder="Email Address" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Password" required>
-                    </div>
-                    <div class="pass-link">
-                        <a href="#">Forgot password?</a>
-                    </div>
-                    <div class="field btn">
-                        <div class="btn-layer"></div>
-                        <input type="submit" value="Login">
-                    </div>
-                    <div class="signup-link">
-                        Not a member? <a href="">Signup now</a>
-                    </div>
-                </form>
-                <form action="#" class="signup">
-                    <div class="field">
-                        <input type="text" placeholder="Email Address" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Password" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Confirm password" required>
-                    </div>
-                    <div class="field btn">
-                        <div class="btn-layer"></div>
-                        <input type="submit" value="Signup">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <script>
-        const loginText = document.querySelector(".title-text .login");
-        const loginForm = document.querySelector("form.login");
-        const loginBtn = document.querySelector("label.login");
-        const signupBtn = document.querySelector("label.signup");
-        const signupLink = document.querySelector("form .signup-link a");
-        signupBtn.onclick = (() => {
-            loginForm.style.marginLeft = "-50%";
-            loginText.style.marginLeft = "-50%";
-        });
-        loginBtn.onclick = (() => {
-            loginForm.style.marginLeft = "0%";
-            loginText.style.marginLeft = "0%";
-        });
-        signupLink.onclick = (() => {
-            signupBtn.click();
-            return false;
-        });
-    </script>
+    </section>
 </body>
 
 </html>
