--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -27,7 +26,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5d4c217aa8.js" crossorigin="anonymous"></script>
     <!-- CSS Styles Link -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="sty.css" />
     <title>Login and Registration</title>
 </head>
 
@@ -43,7 +42,7 @@
         <div class="container">
             <div class="row mt-5">
                 <div class="col-lg-4 m-auto rounded-top wrapper sign-up-box">
-                    <h2 class="text-center pt-3">Signup Now</h2>
+                    <h2 class="text-center pt-3">Teacher Signup</h2>
                     <p class="text-center text-muted lead mb-3">
                         To Access Money Management Tool
                     </p>
@@ -54,68 +53,33 @@
                             <span class="input-group-text">
                                 <i class="fa fa-user"></i>
                             </span>
-                            <input type="text" id="first_name" class="form-control" placeholder="First Name" required />
-                        </div>
-                        <!-- Last Name Div -->
-                        <div class="input-group mb-3">
-                            <span class="input-group-text">
-                                <i class="fa fa-user"></i>
-                            </span>
-                            <input type="text" id="last_name" class="form-control" placeholder="Last Name" required />
+                            <input type="text" class="form-control" placeholder="First Name" required />
                         </div>
                         <!-- Email Div -->
                         <div class="input-group mb-3">
                             <span class="input-group-text">
                                 <i class="fa-solid fa-envelope"></i>
                             </span>
-                            <input type="text" id="email" class="form-control" placeholder="Email" required />
+                            <input type="text" class="form-control" placeholder="Email" required />
                         </div>
                         <!-- Password Div -->
                         <div class="input-group mb-3">
                             <span class="input-group-text">
                                 <i class="fa-solid fa-lock"></i>
                             </span>
-                            <input type="password" id="password" class="form-control" placeholder="Password" required />
+                            <input type="password" class="form-control" placeholder="Password" required />
                         </div>
-                        <!-- Confirm Password Div
-              <div class="input-group mb-3">
-                <span class="input-group-text">
-                  <i class="fa-solid fa-lock"></i>
-                </span>
-                <input
-                  type="password"
-                  id="confirm-password"
-                  class="form-control"
-                  placeholder="Confirm Password"
-                  required
-                />
-              </div> -->
-
-                        <!-- Admin or student Div -->
-
-                        <!-- <div class="select mb-2 text-center">
-                <select
-                  class="form-select mb-3"
-                  aria-label="AoS"
-                  onchange="if (this.selectedIndex==2){this.form['access'].style.visibility='visible'} else {this.form['access'].style.visibility='hidden'};"
-                >
-                  <option selected>Select User Type</option>
-                  <option value="1">Teacher / Parent</option>
-                  <option value="2">Student / Child</option>
-                </select>
-                <input
-                  type="textbox"
-                  id="role"
-                  name="access"
-                  placeholder="Enter Access Code"
-                  style="visibility: hidden"
-                />
-              </div> -->
-
+                        <!-- Password Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa-solid fa-lock"></i>
+                            </span>
+                            <input type="password" class="form-control" placeholder="Create Class Code" required />
+                        </div>
                         <!-- Signup Button Div -->
                         <div class="d-grid text-center">
-                            <button onclick="register()" class="btn btn-success mb-3">
-                                Register
+                            <button type="button" class="btn btn-success mb-3">
+                                Signup Now
                             </button>
                             <p class="text-center text-muted mt-2">
                                 Click "Signup Now" to fully register and access the Money
@@ -128,34 +92,54 @@
                     </form>
                     <!-- Form End -->
                 </div>
-                <div class="col-lg-4 m-auto rounded-top wrapper log-in-box">
-                    <h2 class="text-center pt-3">Login</h2>
-                    <p class="text-center text-muted lead mb-3"></p>
+
+                <!-- student signup -->
+                <div class="col-lg-4 m-auto rounded-top wrapper sign-up-box">
+                    <h2 class="text-center pt-3">Student Signup</h2>
+                    <p class="text-center text-muted lead mb-3">
+                        To Access Money Management Tool
+                    </p>
                     <!-- Form Start -->
                     <form action="#">
+                        <!-- Class Name Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa fa-user"></i>
+                            </span>
+                            <input type="text" class="form-control" placeholder="Class Code" required />
+                        </div>
+                        <!-- First Name Div -->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="fa fa-user"></i>
+                            </span>
+                            <input type="text" class="form-control" placeholder="First Name" required />
+                        </div>
                         <!-- Email Div -->
                         <div class="input-group mb-3">
                             <span class="input-group-text">
                                 <i class="fa-solid fa-envelope"></i>
                             </span>
-                            <input type="text" id="login-email" class="form-control" placeholder="Email" required />
+                            <input type="text" class="form-control" placeholder="Email" required />
                         </div>
                         <!-- Password Div -->
                         <div class="input-group mb-3">
                             <span class="input-group-text">
                                 <i class="fa-solid fa-lock"></i>
                             </span>
-                            <input type="password" id="login-password" class="form-control" placeholder="Password"
-                                required />
+                            <input type="password" class="form-control" placeholder="Password" required />
                         </div>
-                        <!-- Login Button Div -->
+                        <!-- Signup Button Div -->
                         <div class="d-grid text-center">
-                            <button onclick="login()" class="btn btn-success mb-3">
-                                Login Now
+                            <button type="button" class="btn btn-success mb-3">
+                                Signup Now
                             </button>
+                            <p class="text-center text-muted mt-2">
+                                Click "Signup Now" to fully register and access the Money
+                                Management Tool
+                            </p>
                             <p class="text-center">
-                                Don't have an account?
-                                <a href="index.html"> Register Here</a>
+                                Already have an account? <a href="login.html"> Login Here</a>
                             </p>
                         </div>
                     </form>
@@ -164,6 +148,7 @@
             </div>
         </div>
     </section>
+
 </body>
 
 </html>
